# webcam-ip

./: .gitignore  CMakeLists.txt  README.md  configurations.h  webcam-ip.cpp  webcam-ip.h  webcam-ip.sln  webcam-ip.vcxproj  webcam-ip.vcxproj.filters
examples/client-html-example/: client.js  index.html
examples/wsl-webcam-capture-example/: requirements.txt
readme/Photoshop/: Thumb.psd
wsl-webcam-capture-example/: get_camera_streaming.py
